fixed modal width on tablet version

--- a/css/main.css
+++ b/css/main.css
@@ -660,6 +660,12 @@ body {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 450px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
